Chat to game, change to fix card overflow defeat and virtory sscreen

--- a/Magix/css/global.css
+++ b/Magix/css/global.css
@@ -80,3 +80,17 @@ body {
     opacity: 0.7;
     display: none;
 }
+
+.backbutton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 3px solid black;
+    border-radius: 5px;
+    width: 120px;
+    height: 50px;
+    background-image: url(../img/cutebackground3.jpg);
+    position: absolute;
+    top: 5px;
+    right: 5px;
+}
